test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-create-on-trigger-deletion-forbidden/downstream.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: podtemplate-deleted
  namespace: cpol-trigger-deletion-forbidden-ns
data:
  deleted: trigger-podtemplate
