test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-create-on-trigger-deletion-forbidden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-trigger-deletion-forbidden-ns
