test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-create-on-trigger-deletion-forbidden/trigger.yaml
apiVersion: v1
kind: PodTemplate
metadata:
  name: trigger-podtemplate
  namespace: cpol-trigger-deletion-forbidden-ns
template:
  spec:
    containers:
    - name: nginx
      image: nginx
