test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-data-create-on-trigger-deletion-forbidden/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-data-create-on-trigger-deletion-forbidden
spec:
  concurrent: false
  steps:
  - name: background controller cannot read the trigger kind
    try:
    - script:
        content: kubectl auth can-i get podtemplates --namespace cpol-trigger-deletion-forbidden-ns --as system:serviceaccount:kyverno:kyverno-background-controller
        check:
          ($error != null): true
          (trim_space($stdout)): 'no'
  - name: create trigger
    try:
    - apply:
        file: namespace.yaml
    - apply:
        file: trigger.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-trigger-deletion-forbidden
  - name: delete trigger
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: PodTemplate
          name: trigger-podtemplate
          namespace: cpol-trigger-deletion-forbidden-ns
  - name: downstream is generated
    try:
    - assert:
        file: downstream.yaml
